<resources>
    <string name="app_name" translatable="false">Blablapub</string>
    <string name="app_url">https://blablapub.tk/api/</string>
    <string-array name="pantallas">
        <item>Inicio</item>
        <item>Perfil</item>
        <item>Ajustes</item>
    </string-array>
    <string name="lOGIN">LOGIN</string>
    <string name="REGISTRO">REGISTRO</string>
    <string name="introduce_tu_email_para_recuperar_tu_contrase_a">Por favor introduce tu email, te enviaremos un correo</string>
    <string name="email">Email</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="login_incorrecto">El login o la contraseña no son correctos</string>
    <string name="seguir">.Seguir</string>
    <string name="me_gusta">Me gusta</string>
    <string name="comentar">Comentar</string>
    <string name="perfil">Perfil</string>
    <string name="lupa">Buscar</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
    <string name="te_has_registrado">¿Te has registrado?</string>
    <string name="repite_password">Confirma password</string>
    <string name="nombre_no_es_tu_nick">Nombre (no el alias)</string>
    <string name="title_activity_comentarios_del_negocio">ComentariosDelNegocio</string>
    <!-- Strings used for com.cev.blablapub.com.cev.blablapub.views.activitys.views.com.cev.blablapub.com.cev.blablapub.views.activitys.views.activitys.activitys.fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
